<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/action_home" />
    <item
        android:id="@+id/nav_saveditems"
        android:icon="@drawable/ic_menu_favorites"
        android:title="@string/action_saveditems" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_settings" />

    <item android:title="@string/action_header_communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_feedback" />
        </menu>
    </item>
</menu>
