<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="vertical"
    android:background="@null">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_size"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4.0dp"
        android:background="@drawable/shadow_top" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8.0dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="9.0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="5"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/saved_row_footer_total"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimaryInverse"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:layout_width="@dimen/search_row_cashprice_icons_size"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_coins_white"
                android:contentDescription="@string/search_row_description_coins"
                android:adjustViewBounds="true"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_row_horizontal_margin"
                android:layout_marginLeft="@dimen/search_row_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_total_cashprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/search_row_cashprice"
                    android:textStyle="bold"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:lines="1"
                    android:ellipsize="marquee"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_row_cashprice"
                    android:textSize="@dimen/search_row_subtext"
                    android:textColor="?android:textColorPrimaryInverse"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:layout_width="@dimen/search_row_cashprice_icons_size"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_ticket_white"
                android:contentDescription="@string/search_row_description_ticket"
                android:adjustViewBounds="true"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_row_horizontal_margin"
                android:layout_marginLeft="@dimen/search_row_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_total_voucherprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/search_row_cashprice"
                    android:textStyle="bold"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:lines="1"
                    android:ellipsize="marquee"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_row_voucherprice"
                    android:textSize="@dimen/search_row_subtext"
                    android:textColor="?android:textColorPrimaryInverse"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>