<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_results_background"
    tools:context=".fragment.main.BarcodeResultFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0.0"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:alpha="1.0"
        android:layout_below="@+id/search_results"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <include layout="@layout/search_result_row_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light">

            <ProgressBar
                android:id="@+id/search_loading_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/search_row_padding_vertical"
                android:paddingBottom="@dimen/search_row_padding_vertical"
                android:alpha="1.0"
                android:visibility="visible"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_noresults_text"
                android:text="@string/search_noresults"
                android:lineSpacingExtra="8.0dp"
                android:paddingTop="@dimen/search_row_padding_vertical"
                android:paddingBottom="@dimen/search_row_padding_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:alpha="0.0"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/search_error_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/search_row_padding_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:visibility="gone"
                android:alpha="0.0">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_error_text"
                    android:text="@string/search_error"
                    />

                <TextView
                    android:id="@+id/search_error_retry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/search_try_again"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/search_row_padding_vertical"
                    android:paddingBottom="@dimen/search_row_padding_vertical"
                    android:clickable="true"
                    />

            </LinearLayout>
        </RelativeLayout>

        <include layout="@layout/search_result_row_footer" />

    </LinearLayout>

</RelativeLayout>